--- a/T2S/index.html
+++ b/T2S/index.html
@@ -10,34 +10,34 @@
 
 <body>
   <div class="container">
-    <img src="./Group 52.png" id="submit-btn" ></img>
-    <img src="./qqwhite.png" id="QQ" ></img>
+    <img src="./elements/click_me.png" id="submit-btn"></img>
+    <img src="./elements/readout.png" id="readOut"></img>
     <div class="upper-container">
       <div class="header">
-        <img src="./T2S.png" class="app-logo">
+        <img src="./elements/T2S.png" class="app-logo">
         <p class="app_name">Text to Speech Service</p>
       </div>
       <div class="select-section">
-      <!--2 drop-down menu -->
-          <select id="lang-dropdown" >
-            <option class="lang-option">Language</option>
-          </select>
-        <select id="voice-dropdown" >
+        <!--2 drop-down menu -->
+        <select id="lang-dropdown">
+          <option class="lang-option">Language</option>
+        </select>
+        <select id="voice-dropdown">
           <option>Voice</option>
         </select>
       </div>
     </div>
-    
+
     <div class="input-section">
-      <div>      
+      <div>
         <textarea class="user-input" id="text-input" placeholder="Enter your text here..."></textarea>
       </div>
     </div>
-  
+
     <div class="submit-section" id="audio-container">
       <a id="hidden-height">I </a>
     </div>
-    
+
   </div>
   <script src="script.js"></script>
 </body>
